# anti-slop-writer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  PRODUCT.md  README.md  pyproject.toml
.claude/rules/: python.md  security.md  testing.md
.continue/checks/: .gitkeep  code-quality.md  test-coverage.md
.specify/memory/: constitution.md
examples/: config.toml
references/: structural-patterns.md  vocabulary-banlist.md
specs/002-mvp-text-rewrite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mvp-text-rewrite/checklists/: requirements.md
specs/002-mvp-text-rewrite/contracts/: cli.md
src/anti_slop_writer/: __init__.py
src/anti_slop_writer/core/: __init__.py  config.py  models.py  processor.py  rewriter.py  rule_engine.py
src/anti_slop_writer/interfaces/: __init__.py  cli.py
src/anti_slop_writer/language_packs/: __init__.py  base.py  english.py
src/anti_slop_writer/providers/: __init__.py  base.py  config.py  openai_compatible.py
tests/: conftest.py  fixtures.py
tests/integration/: test_cli.py  test_library_first.py  test_provider_config.py
tests/unit/: test_openai_compatible.py  test_processor.py  test_provider.py  test_rewriter.py  test_rule_engine.py
